# apps/api/alembic/env.py
@@ -7,6 +7,7 @@ from alembic import context
 from src.lib.config import escape_alembic_url, settings
 from src.lib.database import Base
 from src.presets.model import ClassroomPreset  # noqa: F401
+from src.saved_resources.model import SavedResource  # noqa: F401
 from src.users.model import User  # noqa: F401
 
 config = context.config
